[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genom_pipeline"
version = "0.1.0"
description = "An end-to-end ontology matching pipeline with LLMs and exact matchers"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Your Name" }
]

dependencies = [
    "torch",
    "transformers",
    "tqdm",
    "pandas",
    "numpy",
    "faiss-cpu",
    "deeponto",
    "textdistance",
    "scikit-learn",
    "tiktoken",
    "openai",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]